(executable
 (name r_type)
 (libraries core re2 ppx_deriving ppx_deriving.create ppx_deriving.eq ppx_deriving.ord ppx_deriving.show ppx_sexp_conv ppx_hash ppx_variants_conv ppx_fields_conv ppx_compare compiler-libs.common)
 (flags (:standard -warn-error A -thread))
 (ocamlopt_flags (:standard -inline 100))
 (preprocess (pps ppx_deriving.create ppx_deriving.eq ppx_deriving.ord ppx_deriving.show ppx_sexp_conv ppx_hash ppx_variants_conv ppx_fields_conv ppx_compare))
 (promote))

(include_subdirs unqualified)
